Home page created

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^7.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "shortid": "^2.2.16"
   }
 }
