--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
             "always"
         ],
         "react/react-in-jsx-scope": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "no-undef": "off"
     }
 }
