--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "client-dev": "webpack-dev-server",
+    "server-dev": "nodemon ./server/main.js",
     "build": "webpack --mode=production --node-env=production"
   },
   "keywords": [],
@@ -37,10 +38,14 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
+    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
