--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "client-dev": "webpack-dev-server",
     "server-dev": "nodemon ./server/main.js",
-    "build": "webpack --mode=production --node-env=production"
+    "build": "webpack --mode=production --node-env=production",
+    "start": "node ./server/main.js"
   },
   "keywords": [],
   "author": "",
